--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css" />
 
-    <title>My Portfolio | Kristian Jefri</title>
+    <title>My Portfolio | Kristian Jefri Fernando</title>
   </head>
   <body id="home">
     <!-- Navbar -->
@@ -33,7 +33,7 @@
       class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm fixed-top"
     >
       <div class="container">
-        <a class="navbar-brand" href="#">Kristian Jefri</a
+        <a class="navbar-brand" href="#">Kristian Jefri Fernando</a
         ><i class="bi bi-amd text-success"></i>
         <button
           class="navbar-toggler"
@@ -49,7 +49,9 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="#home"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#about">About</a>
@@ -69,12 +71,25 @@
     <section class="jumbotron text-center">
       <img
         src="img/profil.png"
-        alt="Kristian Jefri"
+        alt="Kristian Jefri Fernando"
         width="200"
         class="rounded-circle img-thumbnail"
       />
       <h1 class="display-4">Kristian Jefri Fernando</h1>
       <p class="lead"></p>
+      <!-- Ikon Sosial Media -->
+    <div class="icon-container" data-aos="fade-up" data-aos-duration="1000">
+      <a href="https://www.instagram.com" target="_blank">
+          <i class="bi bi-instagram icon"></i>
+      </a>
+      <a href="https://github.com" target="_blank">
+          <i class="bi bi-github icon"></i>
+      </a>
+      <a href="https://www.linkedin.com" target="_blank">
+          <i class="bi bi-linkedin icon"></i>
+      </a>
+  </div>
+
       <svg
         xmlns="http://www.w3.org/2000/svg"
         viewBox="0 0 1440 319"
@@ -92,7 +107,11 @@
     <!-- About -->
     <section id="about">
       <div class="container">
-        <div class="row text-center mb-3">
+        <div
+          class="row text-center mb-3"
+          data-aos="fade-down"
+          data-aos-duration="1000"
+        >
           <div class="col">
             <h2>About Me</h2>
           </div>
@@ -125,20 +144,20 @@
           </div>
         </div>
       </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 319">
+        <path
+          fill="#212529"
+          fill-opacity="10"
+          d="M0,96L48,122.7C96,149,192,203,288,192C384,181,480,107,576,80C672,53,768,75,864,101.3C960,128,1056,160,1152,165.3C1248,171,1344,149,1392,138.7L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
+        ></path>
+      </svg>
     </section>
     <!-- Akhir About -->
 
     <!-- Projects -->
     <section id="projects">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 319">
-        <path
-          fill="#8f37b1"
-          fill-opacity="1"
-          d="M0,128L21.8,117.3C43.6,107,87,85,131,96C174.5,107,218,149,262,165.3C305.5,181,349,171,393,138.7C436.4,107,480,53,524,69.3C567.3,85,611,171,655,181.3C698.2,192,742,128,785,133.3C829.1,139,873,213,916,218.7C960,224,1004,160,1047,154.7C1090.9,149,1135,203,1178,218.7C1221.8,235,1265,213,1309,176C1352.7,139,1396,85,1418,58.7L1440,32L1440,0L1418.2,0C1396.4,0,1353,0,1309,0C1265.5,0,1222,0,1178,0C1134.5,0,1091,0,1047,0C1003.6,0,960,0,916,0C872.7,0,829,0,785,0C741.8,0,698,0,655,0C610.9,0,567,0,524,0C480,0,436,0,393,0C349.1,0,305,0,262,0C218.2,0,175,0,131,0C87.3,0,44,0,22,0L0,0Z"
-        ></path>
-      </svg>
       <div class="container">
-        <div class="row text-center mb-3">
+        <div class="row text-center mb-3" data-aos="zoom-in">
           <div class="col">
             <h2>My Projects</h2>
           </div>
@@ -244,7 +263,7 @@
       <section id="my-keyboards">
         <div class="container">
           <div class="row text-center mb-3">
-            <div class="col">
+            <div class="col" data-aos="zoom-in" data-aos-duration="500">
               <h2>My Keyboards</h2>
             </div>
           </div>
@@ -291,148 +310,20 @@
           </div>
         </div>
       </section>
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        viewBox="0 0 1440 319"
-        preserveAspectRatio="none"
-      >
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 319">
         <path
           fill="#8f37b1"
-          fill-opacity="1"
-          d="M0,0L26.7,42.7C53.3,85,107,171,160,181.3C213.3,192,267,128,320,117.3C373.3,107,427,149,480,181.3C533.3,213,587,235,640,229.3C693.3,224,747,192,800,160C853.3,128,907,96,960,69.3C1013.3,43,1067,21,1120,48C1173.3,75,1227,149,1280,170.7C1333.3,192,1387,160,1413,144L1440,128L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z"
+          fill-opacity="10"
+          d="M0,192L30,208C60,224,120,256,180,245.3C240,235,300,181,360,181.3C420,181,480,235,540,261.3C600,288,660,288,720,272C780,256,840,224,900,218.7C960,213,1020,235,1080,245.3C1140,256,1200,256,1260,250.7C1320,245,1380,235,1410,229.3L1440,224L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z"
         ></path>
       </svg>
     </section>
     <!-- Akhir Projects -->
 
-    <!-- Gallery -->
-    <section id="gallery" class="gallery">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 319">
-        <path
-          fill="#8f37b1"
-          fill-opacity="1"
-          d="M0,128L21.8,117.3C43.6,107,87,85,131,96C174.5,107,218,149,262,165.3C305.5,181,349,171,393,138.7C436.4,107,480,53,524,69.3C567.3,85,611,171,655,181.3C698.2,192,742,128,785,133.3C829.1,139,873,213,916,218.7C960,224,1004,160,1047,154.7C1090.9,149,1135,203,1178,218.7C1221.8,235,1265,213,1309,176C1352.7,139,1396,85,1418,58.7L1440,32L1440,0L1418.2,0C1396.4,0,1353,0,1309,0C1265.5,0,1222,0,1178,0C1134.5,0,1091,0,1047,0C1003.6,0,960,0,916,0C872.7,0,829,0,785,0C741.8,0,698,0,655,0C610.9,0,567,0,524,0C480,0,436,0,393,0C349.1,0,305,0,262,0C218.2,0,175,0,131,0C87.3,0,44,0,22,0L0,0Z"
-        ></path>
-      </svg>
-      <div class="container">
-        <div class="row">
-          <div class="row text-center mb-3">
-            <div class="col">
-              <h2>Gallery</h2>
-            </div>
-          </div>
-        </div>
-        <div class="row justify-content-center">
-          <div class="col-md-3">
-            <a href="#">
-              <img
-                src="/img/gallery/thumbnail/1.png"
-                alt="Gambar 1"
-                class="img-fluid gallery-img"
-              />
-            </a>
-          </div>
-          <div class="col-md-3">
-            <a href="#">
-              <img
-                src="/img/gallery/thumbnail/2.png"
-                alt="Gambar 2"
-                class="img-fluid gallery-img"
-              />
-            </a>
-          </div>
-          <div class="col-md-3">
-            <a href="#">
-              <img
-                src="/img/gallery/thumbnail/3.png"
-                alt="Gambar 3"
-                class="img-fluid gallery-img"
-              />
-            </a>
-          </div>
-          <div class="col-md-3">
-            <a href="#">
-              <img
-                src="/img/gallery/thumbnail/4.png"
-                alt="Gambar 4"
-                class="img-fluid gallery-img"
-              />
-            </a>
-          </div>
-          <div class="col-md-3">
-            <a href="#">
-              <img
-                src="/img/gallery/thumbnail/5.png"
-                alt="Gambar 5"
-                class="img-fluid gallery-img"
-              />
-            </a>
-          </div>
-          <div class="col-md-3">
-            <a href="#">
-              <img
-                src="/img/gallery/thumbnail/6.png"
-                alt="Gambar 6"
-                class="img-fluid gallery-img"
-              />
-            </a>
-          </div>
-          <div class="col-md-3">
-            <a href="#">
-              <img
-                src="/img/gallery/thumbnail/7.png"
-                alt="Gambar 7"
-                class="img-fluid gallery-img"
-              />
-            </a>
-          </div>
-          <div class="col-md-3">
-            <a href="#">
-              <img
-                src="/img/gallery/thumbnail/8.png"
-                alt="Gambar 8"
-                class="img-fluid gallery-img"
-              />
-            </a>
-          </div>
-          <div class="col-md-3">
-            <a href="#">
-              <img
-                src="/img/gallery/thumbnail/9.png"
-                alt="Gambar 9"
-                class="img-fluid gallery-img"
-              />
-            </a>
-          </div>
-          <div class="col-md-3">
-            <a href="#">
-              <img
-                src="/img/gallery/thumbnail/10.png"
-                alt="Gambar 10"
-                class="img-fluid gallery-img"
-              />
-            </a>
-          </div>
-        </div>
-      </div>
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        viewBox="0 0 1440 319"
-        preserveAspectRatio="none"
-      >
-        <path
-          fill="#8f37b1"
-          fill-opacity="1"
-          d="M0,0L26.7,42.7C53.3,85,107,171,160,181.3C213.3,192,267,128,320,117.3C373.3,107,427,149,480,181.3C533.3,213,587,235,640,229.3C693.3,224,747,192,800,160C853.3,128,907,96,960,69.3C1013.3,43,1067,21,1120,48C1173.3,75,1227,149,1280,170.7C1333.3,192,1387,160,1413,144L1440,128L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z"
-        ></path>
-      </svg>
-    </section>
-    <!-- Akhir Gallery -->
-
     <!-- Contact -->
     <section id="contact">
       <div class="container">
-        <div class="row text-center mb-3">
+        <div class="row text-center mb-3" data-aos="zoom-in">
           <div class="col">
             <h2>Contact Me</h2>
           </div>
@@ -501,7 +392,7 @@
           </div>
         </div>
       </div>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 319">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#212529"
           fill-opacity="1"
@@ -524,12 +415,16 @@
     <!-- Akhir Footer -->
 
     <!--JavaScript-->
+
+    <!-- Bootstrap JS -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    <!-- Bootstrap JS End -->
 
+    <!-- AOS JS -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       const galleryImage = document.querySelectorAll(".gallery-img");
@@ -543,7 +438,9 @@
         once: true,
       });
     </script>
+    <!-- AOS JS End -->
 
+    <!-- GSAP JS -->
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/TextPlugin.min.js"></script>
     <script>
@@ -574,7 +471,9 @@
         ease: "back",
       });
     </script>
+    <!-- GSAP JS End -->
 
+    <!-- Form JS -->
     <script>
       const scriptURL =
         "https://script.google.com/macros/s/AKfycbw-enCJBubrN1dZyjgXHoniQKxqpVVcjoppkjYTq-H50oqLQ-zE6G5fUQNXAp8cgpNwBw/exec";
@@ -605,7 +504,9 @@
         })
         .catch((error) => console.error("Error!", error.message));
     </script>
+    <!-- Form JS End -->
 
+    <!-- Vanilla JS -->
     <script type="text/javascript" src="js/vanilla-tilt.min.js"></script>
     <script type="text/javascript">
       VanillaTilt.init(document.querySelectorAll(".keyboard-box"), {
@@ -615,6 +516,6 @@
         gyroscope: true,
       });
     </script>
-
+    <!-- Vanilla JS End -->
   </body>
 </html>
